# control-fabric-platform

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  architecture.md  control_fabric_slm_gpu_training.ipynb  demo.py  demo_release_governance.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  slm_evaluate.py  slm_finetune_30step.py
.github/workflows/: ci.yml  deploy-dev.yml  deploy-prod.yml  deploy-uat.yml  deploy.yml  release.yml
app/: __init__.py  main.py
app/core/: __init__.py  audit.py  config.py  control_link.py  control_object.py  domain_integration.py  domain_pack_loader.py  errors.py  exceptions.py  fabric_service.py  logging.py  platform_action_release_gate.py  platform_validation_chain.py  types.py  (+4 more)
benchmarks/: results-quick.json  run_benchmarks.py
cli/: cf.py
control-fabric-backend/: .env.example  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
control-fabric-backend/alembic/: env.py
control-fabric-backend/alembic/versions/: 001_initial_schema.py
control-fabric-backend/app/: main.py
control-fabric-backend/app/api/middleware/: __init__.py  rate_limit.py  request_id.py
control-fabric-backend/app/api/routes/: __init__.py  auth.py  cases.py  contracts.py  documents.py  evals.py  health.py
control-fabric-backend/app/core/: config.py  exceptions.py  logging.py  security.py  telemetry.py
control-fabric-backend/app/db/: base.py  session.py
control-fabric-backend/app/db/models/: __init__.py  audit.py  control.py  document.py  domain_pack.py  entity.py  eval.py  inference.py  notification.py  prompt.py  tenant.py  user.py  validation.py  workflow.py
control-fabric-backend/app/domain_packs/contract_margin/: __init__.py
control-fabric-backend/app/domain_packs/contract_margin/evals/: __init__.py  eval_cases.py
control-fabric-backend/app/domain_packs/contract_margin/parsers/: __init__.py  contract_parser.py
control-fabric-backend/app/domain_packs/contract_margin/prompts/: __init__.py  contract_prompts.py
control-fabric-backend/app/domain_packs/contract_margin/rules/: __init__.py  billability.py  leakage.py  penalty.py  recovery.py  scope.py
control-fabric-backend/app/domain_packs/contract_margin/schemas/: __init__.py  contract.py
control-fabric-backend/app/domain_packs/contract_margin/templates/: __init__.py  report_templates.py
control-fabric-backend/app/domain_packs/reconciliation/: __init__.py  conflict_detector.py  evidence.py  linkers.py  margin_reconciler.py
control-fabric-backend/app/domain_packs/telco_ops/: __init__.py
control-fabric-backend/app/domain_packs/telco_ops/parsers/: __init__.py  incident_parser.py
control-fabric-backend/app/domain_packs/telco_ops/rules/: __init__.py  incident_rules.py
control-fabric-backend/app/domain_packs/telco_ops/schemas/: __init__.py  telco_schemas.py
control-fabric-backend/app/domain_packs/utilities_field/: __init__.py
control-fabric-backend/app/domain_packs/utilities_field/parsers/: __init__.py  work_order_parser.py
control-fabric-backend/app/domain_packs/utilities_field/rules/: __init__.py  readiness_rules.py
control-fabric-backend/app/domain_packs/utilities_field/schemas/: __init__.py  field_schemas.py
control-fabric-backend/app/schemas/: __init__.py  audit.py  auth.py  common.py  control_objects.py  documents.py  eval.py  inference.py  validation.py  workflows.py
control-fabric-backend/app/services/audit/: service.py
control-fabric-backend/app/services/auth/: service.py
control-fabric-backend/app/services/canonicalization/: service.py
control-fabric-backend/app/services/chunking/: service.py
control-fabric-backend/app/services/compiler/: service.py
control-fabric-backend/app/services/embedding/: service.py
control-fabric-backend/app/services/eval/: service.py
control-fabric-backend/app/services/inference/: service.py
control-fabric-backend/app/services/ingest/: service.py
control-fabric-backend/app/services/reconciler/: service.py
control-fabric-backend/app/services/reporting/: service.py
control-fabric-backend/app/services/retrieval/: service.py
control-fabric-backend/app/services/validation/: service.py
control-fabric-backend/app/workflows/contract_compile/: __init__.py  workflow.py
control-fabric-backend/app/workflows/margin_diagnosis/: __init__.py  workflow.py
control-fabric-backend/data/fixtures/: sample_contract.json  sample_incident.json  sample_work_order.json
control-fabric-backend/infra/docker/: Dockerfile.api  Dockerfile.worker
control-fabric-backend/infra/scripts/: bootstrap.sh  seed_data.py
control-fabric-backend/temporal_worker/: __init__.py  worker.py
control-fabric-backend/tests/: conftest.py
control-fabric-backend/tests/api/: test_health.py  test_health_routes.py
control-fabric-backend/tests/integration/: test_full_pipeline.py
control-fabric-backend/tests/regression/: test_eval_cases.py
control-fabric-backend/tests/unit/: test_billability_rules.py  test_config.py  test_contract_parser.py  test_contract_schemas.py  test_evidence_chain.py  test_incident_rules.py  test_leakage_rules.py  test_linkers.py  test_penalty_analyzer.py  test_readiness_rules.py  test_reconciliation.py  test_recovery_engine.py  test_schemas.py  test_scope_detector.py  test_validation_service.py
control-fabric-backend/tests/workflows/: test_contract_compile.py  test_margin_diagnosis.py  test_workflow_definitions.py
demos/: proof_not_ai_governance.py  proof_not_audit_logging.py  proof_not_workflow.py  proof_semantic_gap_detection.py  run_all_proofs.py
domain-packs/: __init__.py
domain_packs/: __init__.py  contract_margin  telco_ops  utilities_field
scripts/: bootstrap.sh  ci_diagnostic.py  demo_preflight.py  health_check.sh  run_all_tests.sh  run_wave1_tests.sh  security_self_assessment.py  seed_data.py  slm_enrichment_demo.py
sdk/: setup.py
services/: escalation_engine.py  readiness_engine.py
shared/: __init__.py
slm/: run_pipeline.py
temporal_worker/: main.py
tests/: __init__.py  conftest.py
workflows/: __init__.py  worker.py
(+887 files in other folders)
