[tool.poetry]
name = "control-fabric-platform"
version = "0.1.0"
description = "Modular AI platform for telecom margin assurance and operational control"
authors = ["Earl Werner <earl.werner@prodapt.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
pydantic = "^2.7.0"
sqlalchemy = "^2.0.0"
alembic = "^1.13.0"
httpx = "^0.27.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.9"
openai = "^1.30.0"
anthropic = "^0.28.0"
boto3 = "^1.34.0"
redis = "^5.0.0"
celery = "^5.4.0"
pytesseract = "^0.3.10"
pypdf2 = "^3.0.0"
python-docx = "^1.1.0"
pandas = "^2.2.0"
numpy = "^1.26.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^5.0.0"
httpx = "^0.27.0"
ruff = "^0.4.0"
mypy = "^1.10.0"
black = "^24.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
