[tool.poetry]
name = "control-fabric-platform"
version = "0.1.0"
description = "Modular AI platform for telecom margin assurance and operational control"
authors = ["Earl Werner <earl.werner@prodapt.com>"]
readme = "README.md"
packages = [
    { include = "app" },
    { include = "shared" },
    { include = "services" },
    { include = "apps" },
    { include = "workflows" },
]

[tool.poetry.dependencies]
python = "^3.11"

# ── Web framework ─────────────────────────────────────────────
fastapi = "^0.111.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
python-multipart = "^0.0.9"

# ── Data / ORM ────────────────────────────────────────────────
pydantic = "^2.7.0"
pydantic-settings = "^2.3.0"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.0" }
asyncpg = "^0.29.0"
alembic = "^1.13.0"
pgvector = "^0.3.0"

# ── Auth ──────────────────────────────────────────────────────
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
passlib = { extras = ["bcrypt"], version = "^1.7.4" }

# ── Task / workflow ───────────────────────────────────────────
redis = "^5.0.0"
celery = "^5.4.0"
temporalio = "^1.6.0"

# ── AI / LLM ─────────────────────────────────────────────────
openai = "^1.30.0"
anthropic = "^0.28.0"

# ── Observability ─────────────────────────────────────────────
structlog = "^24.1.0"
opentelemetry-api = "^1.25.0"
prometheus-client = "^0.20.0"

# ── HTTP / cloud ──────────────────────────────────────────────
httpx = "^0.27.0"
boto3 = "^1.34.0"

# ── Document parsing ─────────────────────────────────────────
pytesseract = "^0.3.10"
pypdf2 = "^3.0.0"
python-docx = "^1.1.0"

# ── Data utilities ────────────────────────────────────────────
pandas = "^2.2.0"
numpy = "^1.26.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^5.0.0"
httpx = "^0.27.0"
ruff = "^0.4.0"
mypy = "^1.10.0"
black = "^24.4.0"
factory-boy = "^3.3.0"
faker = "^25.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests requiring external services",
    "e2e: marks end-to-end tests",
]

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/conftest.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
    "pass",
]
show_missing = true
fail_under = 70
