[tool.poetry]
name = "control-fabric-backend"
version = "0.1.0"
description = "Control Fabric Platform – AI-powered telecom margin assurance, contract intelligence, and operational control backend."
authors = ["Control Fabric Team"]
license = "Proprietary"
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = ">=0.111,<1.0"
uvicorn = {version = ">=0.29,<1.0", extras = ["standard"]}
pydantic = "^2.7"
pydantic-settings = ">=2.2,<3.0"
sqlalchemy = {version = "^2.0", extras = ["asyncio"]}
asyncpg = ">=0.29,<1.0"
alembic = ">=1.13,<2.0"
pgvector = ">=0.2,<1.0"
python-jose = {version = ">=3.3,<4.0", extras = ["cryptography"]}
passlib = {version = ">=1.7,<2.0", extras = ["bcrypt"]}
redis = "^5.0"
temporalio = "^1.6"
openai = "^1.30"
structlog = ">=24.1,<25.0"
opentelemetry-api = ">=1.24,<2.0"
prometheus-client = ">=0.20,<1.0"
httpx = ">=0.27,<1.0"
python-multipart = ">=0.0.9,<1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
pytest-asyncio = "^0.23"
pytest-cov = "^5.0"
httpx = ">=0.27,<1.0"
ruff = "^0.4"
mypy = "^1.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# ── Ruff ──────────────────────────────────────────────────────────────────────

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501", "B008", "SIM105", "UP042", "F841", "SIM102", "E741", "F403", "B905", "B007", "SIM108", "SIM103", "E402", "B904", "F401", "RUF003", "RUF005", "RUF001", "RUF002", "RUF012", "UP046", "B011", "N"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

# ── mypy ──────────────────────────────────────────────────────────────────────

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

# ── pytest ────────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests requiring external services",
    "api: API endpoint tests",
    "regression: Regression / eval-case tests",
    "workflow: Workflow orchestration tests",
]

# ── coverage ──────────────────────────────────────────────────────────────────

[tool.coverage.run]
source = ["app"]
omit = ["app/db/models/*", "alembic/*"]

[tool.coverage.report]
fail_under = 70
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__",
]
